switch and fix overflow

--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ blockquote {
 blockquote p {
 	color: #999999!important;
 }
+.wrap {
+	position: relative;
+	overflow-x:hidden
+}
 .grid-container {
 	max-width: 1200px;
 }
@@ -666,6 +670,34 @@ input[type="submit"].search_submit:focus {
 .p iframe {
 	border: none!important;
 }
+.switch-paddle {
+	border-radius: 20px;
+}
+.switch-paddle::after {
+	border-radius: 20px;
+}
+input:checked~.switch-paddle {
+	background: #019839;
+}
+.switch_inner {
+	flex: 2;
+	display: flex;
+	flex-direction: row;
+}
+.switch_title {
+    font-size: 15px;
+    font-weight: 600;
+    margin-top: 7px;
+    margin-right: 15px;
+}
+.switch_desc {
+	font-size: 15px;
+    font-weight: 600;
+    margin-top: 7px;
+    margin-left: 15px;
+    font-weight: 600;
+    color: #019839;
+}
 /* about */
 #about {
 	padding-top: 30px;
@@ -1218,7 +1250,7 @@ input[type="submit"].search_submit:focus {
 		margin-bottom: 15px;
 		justify-content: flex-start;
 	}
-	.footer_list, .none, .switch, .logo {
+	.footer_list, .none, .switch, .logo, .switch_inner {
 		display: none;
 	}
 	#footer_bottom {
